--- a/development/tooling.html
+++ b/development/tooling.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.BpExH3hx.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.Bw50XrYS.js"></script>
+    <script type="module" src="/assets/app.Cq3gaDh5.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.BZ-2FSY5.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.BQOCRzK9.js">
     <link rel="modulepreload" href="/assets/chunks/framework.BLeb-LED.js">
     <link rel="modulepreload" href="/assets/development_tooling.md.CHviK4UD.lean.js">
     <meta name="darkreader-lock">
