--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <link rel="preload stylesheet" href="/assets/style.DnFhAaVu.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.D80_4tDe.js"></script>
+    <script type="module" src="/assets/app.Dh0fn3Q8.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
     <meta name="darkreader-lock">
     <meta name="theme-color" content="#e72323">
