--- a/guides/tracker-service-extensions.html
+++ b/guides/tracker-service-extensions.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.DnFhAaVu.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.D80_4tDe.js"></script>
+    <script type="module" src="/assets/app.Dh0fn3Q8.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.n7xQ1I23.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.BDQCg0hg.js">
     <link rel="modulepreload" href="/assets/chunks/framework.DaW1Toim.js">
     <link rel="modulepreload" href="/assets/guides_tracker-service-extensions.md.CjEHJmwa.lean.js">
     <meta name="darkreader-lock">
