--- a/faq.html
+++ b/faq.html
@@ -9,9 +9,9 @@
     <link rel="preload stylesheet" href="/assets/style.B00Vaa3z.css" as="style">
     <link rel="preload stylesheet" href="/vp-icons.css" as="style">
     
-    <script type="module" src="/assets/app.DxrvmCBA.js"></script>
+    <script type="module" src="/assets/app.0gfMpUgK.js"></script>
     <link rel="preload" href="/assets/inter-roman-latin.Di8DUHzh.woff2" as="font" type="font/woff2" crossorigin="">
-    <link rel="modulepreload" href="/assets/chunks/theme.DjEDB-Ax.js">
+    <link rel="modulepreload" href="/assets/chunks/theme.BNiCaKcT.js">
     <link rel="modulepreload" href="/assets/chunks/framework.DaW1Toim.js">
     <link rel="modulepreload" href="/assets/faq.md.CLIF6JQg.lean.js">
     <meta name="darkreader-lock">
